---
title: "CatLium EduTech — Database Schema (3a): Questions and Paper Patterns"
---
%%{init: {'theme':'base','themeVariables':{'fontFamily':'serif','primaryColor':'#ffffff','primaryTextColor':'#000000','primaryBorderColor':'#000000','lineColor':'#000000','secondaryColor':'#ffffff','tertiaryColor':'#ffffff'},'htmlLabels':false,'er':{'useMaxWidth':false}}}%%
erDiagram
    institutes ||--o{ question_types : institute_id
    institutes ||--o{ questions : institute_id
    subjects ||--o{ questions : subject_id
    chapters ||--o{ questions : chapter_id
    topics ||--o{ questions : topic_id
    institutes ||--o{ paper_patterns : institute_id
    materials ||--o{ paper_patterns : source_material_id
    paper_patterns ||--o{ paper_pattern_subjects : pattern_id
    subjects ||--o{ paper_pattern_subjects : subject_id
    institutes ||--o{ question_papers : institute_id
    paper_patterns o|--o{ question_papers : blueprint_id
    question_papers ||--o{ question_paper_questions : paper_id
    questions ||--o{ question_paper_questions : question_id

    question_types {
        uuid id PK
        uuid institute_id FK "NULL = global starter"
        varchar code UK "per track"
        varchar answer_format "MCQ | TRUE_FALSE | FILL_IN_BLANK | TEXT | MATCHING | NUMERICAL"
        varchar kind "OBJECTIVE | SUBJECTIVE"
        int default_marks
        jsonb evaluation_config
    }
    questions {
        uuid id PK
        uuid institute_id FK
        text stem
        varchar question_type
        varchar answer_format
        varchar difficulty "EASY | MEDIUM | HARD"
        text explanation
        jsonb payload
        varchar approval_status "PENDING | APPROVED | REJECTED"
        uuid source_pattern_id FK
    }
    paper_patterns {
        uuid id PK
        uuid institute_id FK
        varchar title
        varchar status "DRAFT | REVIEW | APPROVED"
        boolean is_locked
        int version
        varchar source_type "MANUAL | TEXT | MATERIAL | PREVIOUS_YEAR_PAPER"
        jsonb structure
    }
    paper_pattern_subjects {
        uuid pattern_id FK
        uuid subject_id FK
    }
    question_papers {
        uuid id PK
        uuid institute_id FK
        uuid blueprint_id FK "set-null"
        varchar title
        jsonb instructions
        int max_marks
    }
    question_paper_questions {
        uuid id PK
        uuid paper_id FK
        uuid question_id FK "live FK, KNOWN GAP"
        int marks
        varchar section
    }
    institutes {
        uuid id PK
        varchar name
        varchar slug UK
        varchar status "active | deactivated"
    }
    subjects {
        uuid id PK
        uuid institute_id FK
        varchar name
        varchar slug UK "per institute"
        timestamp deleted_at "soft delete"
    }
    chapters {
        uuid id PK
        uuid subject_id FK
        varchar name
        varchar slug UK "per subject"
    }
    topics {
        uuid id PK
        uuid chapter_id FK
        varchar name
        varchar slug UK "per chapter"
    }
    materials {
        uuid id PK
        uuid institute_id FK
        uuid subject_id FK
        uuid chapter_id FK
        uuid topic_id FK
        varchar material_type "PDF | IMAGE | DOCUMENT | TEXT"
        varchar processing_status "UPLOADED | QUEUED | PROCESSING | READY | FAILED"
        varchar storage_key
        text text_content
        int revision
    }